--- a/force-app/main/default/classes/stoHelperClass_Test.cls
+++ b/force-app/main/default/classes/stoHelperClass_Test.cls
@@ -28,7 +28,9 @@ public with sharing class stoHelperClass_Test {
             personContact.AccountId,
             personContact.Id,
             true,
-            'STO', null, null
+            'STO',
+            null,
+            null
         );
         Test.startTest();
         System.assertNotEquals(null, stoHelperClass.getOpenThreads('Arbeid'), 'Expected to get a thread');
@@ -96,7 +98,14 @@ public with sharing class stoHelperClass_Test {
     @isTest
     static void createThreadWithCaseTest() {
         Test.startTest();
-        Thread__c thread = stoHelperClass.createThreadWithCase('Arbeid', 'This is the message', true, 'STO', null, null);
+        Thread__c thread = stoHelperClass.createThreadWithCase(
+            'Arbeid',
+            'This is the message',
+            true,
+            'STO',
+            null,
+            null
+        );
         Test.stopTest();
         List<Message__c> msgList = [SELECT Id FROM Message__c WHERE CRM_Thread__c = :thread.Id];
         System.assertEquals(1, msgList.size());
@@ -131,7 +140,7 @@ public with sharing class stoHelperClass_Test {
     @isTest
     static void getBTONewsTest() {
         Test.startTest();
-        List<stoHelperClass.News> newsList = stoHelperClass.getCategoryNews('Beskjed til oss','Pensjon');
+        List<stoHelperClass.News> newsList = stoHelperClass.getCategoryNews('Beskjed til oss', 'Pensjon');
         System.assertEquals(newsList.isEmpty(), false);
         Test.stopTest();
     }
@@ -151,7 +160,9 @@ public with sharing class stoHelperClass_Test {
             personContact.AccountId,
             personContact.Id,
             true,
-            'STO', null, null
+            'STO',
+            null,
+            null
         );
 
         Test.startTest();
