added new theme field on faq

--- a/force-app/main/default/classes/stoHelperClass.cls
+++ b/force-app/main/default/classes/stoHelperClass.cls
@@ -189,7 +189,7 @@ public with sharing class stoHelperClass {
         for (CRM_FAQ__c rec : [
             SELECT Id, CRM_Content__c, CRM_Title__c
             FROM CRM_FAQ__c
-            WHERE CRM_Category__c = :pageTheme AND CRM_Shown__c = :pageType
+            WHERE CRM_Theme__c = :pageTheme AND CRM_Shown__c = :pageType
             ORDER BY CRM_Ordering__c ASC
         ]) {
             news.add(new News(rec.CRM_Title__c, rec.CRM_Content__c, rec.Id));
