--- a/force-app/main/default/classes/stoInboxHelper.cls
+++ b/force-app/main/default/classes/stoInboxHelper.cls
@@ -16,7 +16,7 @@ public with sharing class stoInboxHelper {
                 CRM_Thread_Type__c,
                 CRM_Related_Object__c,
                 Name,
-                NKS_Inbox_Type__c,
+                NKS_Inbox_Title__c,
                 NKS_Inbox_Theme__c,
                 (
                     SELECT Id, CRM_Message_Text__c, CRM_External_Message__c
@@ -68,7 +68,7 @@ public with sharing class stoInboxHelper {
                 CRM_Thread_Type__c,
                 CRM_Related_Object__c,
                 Name,
-                NKS_Inbox_Type__c,
+                NKS_Inbox_Title__c,
                 NKS_Inbox_Theme__c,
                 (
                     SELECT Id, CRM_Message_Text__c, CRM_External_Message__c
@@ -127,7 +127,7 @@ public with sharing class stoInboxHelper {
                 .replaceAll('(\\r|\\n)+', ' ');
             message.isExternal = t.Messages__r[0]?.CRM_External_Message__c;
             thread.latestmessage = message;
-            thread.inboxType = t.NKS_Inbox_Type__c;
+            thread.inboxTitle = t.NKS_Inbox_Title__c;
             thread.inboxTheme = t.NKS_Inbox_Theme__c;
             return thread;
         }
@@ -174,7 +174,7 @@ public with sharing class stoInboxHelper {
         @AuraEnabled
         public String recordName;
         @AuraEnabled
-        public String inboxType;
+        public String inboxTitle;
         @AuraEnabled
         public String inboxTheme;
     }
